Finished WhiteMarbleTest